
* Job server displays catalog and job name in $0.

* Renamed catalog_init SpecialSub to request_init to accommodate for a hook
  called after catalog configuration (#160).

UserTag
-------

* Added scratch option to [get-url] for saving binary content into a scratch
  variable instead of returning it.

Payment
-------

* Removed inoperative WellsFargo payment module.

Jobs
----

* Force email notification of errors, can be prevented with ignore_errors
  setting.

* Inclusion of global jobs can be forced with "Jobs UseGlobal 1"

Standard demo
-------------

* Fixed a security bug where an attacker could craft a URI that tricks
  Interchange into executing arbitrary Perl code.  The Perl code would be 
  subject to the Safe constraints of course, but could still be devastating 
  to the security of the target website.

* Display modified date on Saved Carts / Recurring Order page in a human
  readable format (#37).

UI
--

* Matrix options editor can now display more than 50 variants via the use of a
  more-list.

* Fix sort order of generated variant codes so that they match the code that is
  ordered from the flypage.

* You can now mark individual options to be treated as "simple options" even
  though the product is set to Matrix options.  This is useful if you have one
  or more options that you don't wish to track for inventory purposes or if you
  want to use a text or textarea widget (which is not possible with matrix
  options).  Requires the addition of an o_simple column to the options table
  for existing catalogs.

* New [widget-info] UI tag.

* Option editor will now correctly generate variants for options that use
  widgets capable of multiple selections (ie, multiple or checkbox widgets).

Packaging
---------

* Apache 2 is now default webserver for Debian packages.

* Added missing dbconfig-common hooks and set defaults for database name and
  database user to interchange-cat-standard Debian package.

Interchange 5.5.1 released on 2007-08-21.

Core