@@ -115,6 +115,8 @@ Payment
 
 * Removed inoperative WellsFargo payment module.
 
+* Added Sage payment gateway. http://www.sagepayments.com/
+
 Jobs
 ----
 
